# factory-game

./: CMakeLists.txt  README.md
src/: define.h  main.cpp  raygui.h
src/code/: Chunk.cpp  Chunk.h  Drawer.cpp  Drawer.h  Game.cpp  Game.h  Gui.cpp  Gui.h  Items.cpp  Items.h  Level.cpp  Level.h
src/code/Managers/: BinaryManager.cpp  BinaryManager.h  ChunkManager.cpp  ChunkManager.h  TextureManager.cpp  TextureManager.h
src/code/Managers/Buildings/: Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h
tools/: items_bin.json  items_bin.py  mod_info_bin.json  mod_info_bin.py
tools/fscript/: parser.py
tools/fscript/codes/: code.sml
tools/fscript/sml-syntax/: package.json  sml-syntax-0.0.1.vsix
tools/fscript/sml-syntax/syntaxes/: sml.tmLanguage.json
tools/mods/: script.py
tools/mods/mods/basemod/: data.json  info.json
tools/mods/mods/basemod/scripts/: arm.lua  cchest.lua  chest.lua
